fix: avatar visible on open popup

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -11,4 +11,6 @@
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.4s,opacity 0.3s linear;
+
+    z-index: 5;
 }
