--- a/src/blocks/profile/__avatar-group/.profile__avatar-group.css
+++ b/src/blocks/profile/__avatar-group/.profile__avatar-group.css
@@ -13,7 +13,7 @@
  background-position: center;
  width: 120px;
  height: 120px;
- z-index: 2;
+ z-index: 1;
 
 
  opacity: 0;
